minor cleanup - declare private fields final